# TTS_podcast

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SSH_TEST.md  demo_core.py  env_example.txt  requirements-google.txt  requirements.txt  scaffold.md  setup.cfg  setup.py  setup.sh  system_status.md  test_sample.py
src/: audio_mixer.py  gemini_pipeline.py  lang_detect.py  main.py  pdf_ingest.py  script_gen.py  summarizer.py
src/tts/: azure.py  base.py  coqui.py  eleven.py  gemini.py  google.py  openai.py
src/utils/: log_cfg.py
tests/: test_pipeline.py
utils/: README.md  customization_examples.py  get_voice_info.py  recover_audio.py  regenerate_podcast.py  regenerate_podcast_multi_speaker.py  regenerate_podcast_single_speaker.py
