[metadata]
name = tts-podcast-pipeline
version = 1.0.0
description = Convert PDF documents into engaging podcast dialogues using AI and TTS
long_description = file: README.md
long_description_content_type = text/markdown
author = TTS Podcast Pipeline Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    python-dotenv>=1.0.0
    requests>=2.31.0
    tenacity>=8.2.3
    pdfminer.six>=20231228
    langdetect>=1.0.9
    openai>=1.3.8
    pydub>=0.25.1
    elevenlabs>=0.2.26
    azure-cognitiveservices-speech>=1.34.0

[options.packages.find]
where = src

[options.extras_require]
google = 
    google-cloud-texttospeech>=2.14.0
    google-auth>=2.17.0
    google-auth-oauthlib>=1.0.0
    google-auth-httplib2>=0.1.0
coqui = 
    TTS>=0.21.1
    torch>=2.0.0
    torchaudio>=2.0.0
dev = 
    pytest>=7.4.3
    pytest-cov>=4.1.0
    black>=23.11.0
    flake8>=6.0.0
    mypy>=1.5.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers
    --disable-warnings
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    api: marks tests requiring API keys

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True 